--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:proxy": "node server/proxy.js"
   },
   "dependencies": {
     "react": "^19.2.4",
     "openai": "^4.67.0",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "express": "^4.18.2",
+    "node-fetch": "^3.4.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
